Finished first draft

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -385,21 +385,21 @@
 
     \begin{minipage}{0.49\textwidth}
         \centering
-        \includegraphics[width=\linewidth]{graphs/tsne/combined_6.png}
-        \caption{t-SNE plot for Topic 4.}
+        \includegraphics[width=\linewidth]{graphs/tsne/topic_6.png}
+        \caption{t-SNE plot for Topic 6.}
         \label{sub:topic6}
     \end{minipage}
     \hfill
     \begin{minipage}{0.49\textwidth}
         \centering
-        \includegraphics[width=\linewidth]{graphs/tsne/combined_7.png}
+        \includegraphics[width=\linewidth]{graphs/tsne/topic_7.png}
         \caption{t-SNE plot for Topic 7.}
         \label{sub:topic7}
     \end{minipage}
 
     \begin{minipage}{0.49\textwidth}
         \centering
-        \includegraphics[width=\linewidth]{graphs/tsne/combined_10.png}
+        \includegraphics[width=\linewidth]{graphs/tsne/topic_10.png}
         \caption{t-SNE plot for Topic 10.}
         \label{sub:topic10}
     \end{minipage}
