--- a/interim_report.tex
+++ b/interim_report.tex
@@ -47,7 +47,9 @@
 \input{title/title.tex}
 
 \begin{abstract}
-    To do.
+    This project aims to shed light on the sophistication of backdoor attacks in NLP models. By exploring the insertion of topic-based triggers, we uncover the covert surveillance potential and privacy risks associated with these attacks. Our investigation focuses on transformer models and their ability to accurately detect trigger inputs while maintaining stealthiness to evade detection, creating dual-purpose models which achieve a high level of stealthiness while maintaining an impressive attack success rate.
+
+    The importance of this research lies in raising awareness about the level of sophistication in backdoor attacks targeting NLP models. These attacks pose significant threats to privacy and security, as they exploit the models' learning capabilities for unauthorized surveillance. Our findings emphasize the challenges in introducing and detecting triggers in written text, highlighting the need for robust defenses and transparency to ensure the integrity and security of NLP systems.
 \end{abstract}
 
 \renewcommand{\abstractname}{Acknowledgements}
